# workshop

./: .gitignore  2.py  4.py  5.py  6.py  README.md  README2.md  locustfile.py  locustfile_advanced.py  pyproject.toml  slides.html  slides.md
