[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "locust-cloud==1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
lint.ignore = ["E402", "E501", "E713", "E731"]
lint.select = ["E", "F", "W", "UP", "I001", "ARG001"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|resp)$"

[tool.ruff.lint.isort.sections]
locust_cloud = ["locust_cloud"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "pyright>=1.1.380",
]

[tool.pyright]
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "warning"
reportOptionalSubscript = "none"
